[package]
name = "terraform-jsonnet-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
convert_case = "0.11.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
terraform-wrapper = "0.4.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net"] }
which = "8.0.4"
